--- a/index.html
+++ b/index.html
@@ -1,124 +1,103 @@
 <!DOCTYPE HTML>
-<!--
-	Astral by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
-		<title>Anna Boeri Portfolio Site</title>
+		<title>Anna Boeri</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="css/main.css" />
-		<noscript><link rel="stylesheet" href="css/noscript.css" /></noscript>
-		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie8.css" /><![endif]-->
+		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
-	<body>
+	<body id="top">
 
-		<!-- Wrapper-->
-			<div id="wrapper">
+		<!-- Header -->
+			<header id="header">
+				<div class="inner">
+					<a href="#" class="image avatar"><img src="images/me.png" alt="avatar" /></a>
+					<h1><strong>Anna Boeri</strong><br /></h1>
+					<h1>LA-based Web Developer</h1>
+				</div>
+			</header>
 
-				<!-- Nav -->
-					<nav id="nav">
-						<a href="#me" class="icon fa-home active"><span>Home</span></a>
-						<a href="#work" class="icon fa-folder"><span>Work</span></a>
-						<a href="#contact" class="icon fa-info"><span>Contact</span></a>
-						<a href="https://github.com/annaboeri" target="_blank" class="icon fa-github"><span>Github</span></a>
-						<a href="https://www.linkedin.com/in/annaboeri/" target="_blank" class="icon fa-linkedin"><span>LinkedIn</span></a>
-					</nav>
+		<!-- Main -->
+			<div id="main">
 
-				<!-- Main -->
-					<div id="main">
+				<!-- One -->
+					<section id="one">
+						<header class="major">
+							<h2>About Me</h2>
+						</header>
+						<p>I am a Los Angeles, CA based Web Developer and Stanford grad with previous experience in Teaching and Tech Recruiting. Originally from Baltimore, MD, I moved to LA two years ago from Washington, DC. I love exploring everything LA and the West Coast has to offer and am eager to help grow the open source and local tech community in the area!
+							While I’ve been working most recently with HTML5, CSS3, JavaScript (ES6), and the MERN Stack (MongoDB, Express, React, and Node.js), I love learning new technologies and am open to collaborating on projects of all kinds!</p>
+					</section>
 
-						<!-- Me -->
-							<article id="me" class="panel">
-								<header>
-									<h1>Anna Boeri</h1>
-									<p>Web Developer</p>
-								</header>
-								<a href="#work" class="jumplink pic">
-									<span class="arrow icon fa-chevron-right"><span>See my work</span></span>
-									<img src="images/me.png" alt="" />
-								</a>
-							</article>
-
-						<!-- Work -->
-							<article id="work" class="panel">
-								<header>
-									<h2>Recent Projects</h2><hr />
-								</header>
-								<section>
-									<div class="row">
-										<div class="6u 12u$(mobile)">
-											<img class="image fit" src="images/globalink.png" alt="GLOBALink screenshot">
-											<h3>GLOBALink</h3>
-											<p>
-												Technologies: Node.js, Express, MonggoDB, React, Socket.io, Milligram<br />
-												<a href="https://github.com/annaboeri/Project-4-GLOBALink" target="_blank" class="project-link"><span> Github</span></a>
-												<a href="https://project-4-globalink.herokuapp.com/" target="_blank"><span>Deployed Version</span></a>
-											</p>
-											
-										</div>
-										<div class="6u 12u$(mobile)">
-											<img class="image fit" src="images/etch.png" alt="Etch screenshot">
-											<h3>Etch</h3>
-											<p>
-												Technologies: Node.js, Express, MongoDB, Bootstrap<br />
-												<a href="https://github.com/annaboeri/Etch" target="_blank" class="project-link"><span> Github</span></a>
-												<a href="https://etches.herokuapp.com/" target="_blank"><span>Deployed Version</span></a>
-											</p>
-										</div>
-										<div class="6u 12u$(mobile)">
-											<img class="image fit" src="images/hikela.png" alt="HikeLA screenshot">
-											<h3>HikeLA</h3>
-											<p>
-												Technologies: Ruby, Rails, PostgreSQL, Active Record, Bootstrap<br />
-												<a href="https://github.com/annaboeri/hike_la_app" target="_blank" class="project-link"><span> Github</span></a>
-												<a href="https://hike-la-app.herokuapp.com/" target="_blank"><span>Deployed Version</span></a>
-											</p>
-										</div>
-										<div class="6u 12u$(mobile)">
-											<img class="image fit" src="images/connect4.png" alt="Connect 4 screenshot">
-											<h3>Connect 4</h3>
-											<p>
-												Technologies: HTML, CSS, JavaScript, JQuery <br />
-												<a href="https://github.com/annaboeri/connect-4" target="_blank" class="project-link"><span> Github</span></a>
-												<a href="https://annaboeri.github.io/connect-4/" target="_blank"><span>Deployed Version</span></a>
-											</p>
-										</div>
-									</div>
-								</section>
-							</article>
-
-						<!-- Contact -->
-							<article id="contact" class="panel">
-								<header>
-									<h2>About Me</h2>
-									<p>I am a Los Angeles, CA based Web Developer and Stanford grad with previous experience in Teaching and Tech Recruiting. Originally from Baltimore, MD, I moved to LA two years ago from Washington, DC. I love exploring everything LA and the West Coast has to offer and am eager to help grow the open source and local tech community in the area!
-										While I’ve been working most recently with HTML5, CSS3, JavaScript (ES6), and the MERN Stack (MongoDB, Express, React, and Node.js), I love learning new technologies and am open to collaborating on projects of all kinds!</p><hr />
-									<p>Please feel free to reach out to me at <b>annaboeri@gmail.com</b> or connect with me on <b>LinkedIn</b>!</p>
-								</header>
-							</article>
-
-					</div>
-
-				<!-- Footer -->
-					<div id="footer">
-						<ul class="copyright">
-							<li>&copy; Anna Boeri</li>
+				<!-- Two -->
+					<section id="two">
+						<h2>Recent Work</h2>
+						<div class="row">
+								<article class="6u 12u$(xsmall) work-item">
+										<a href="https://project-4-globalink.herokuapp.com/" target="_blank" class="image fit thumb"><img id="globalink-img" class="project-img" src="images/globalink.png" alt="globalink screenshot" /></a>
+										<h3>GLOBALink</h3>
+										<p>Technologies: Node.js, Express, MonggoDB, React, Socket.io, Milligram</p>
+									</article>
+									<article class="6u$ 12u$(xsmall) work-item">
+										<a href="https://etches.herokuapp.com/" class="image fit thumb" target="_blank"><img id="etch-img" class="project-img" src="images/etch.png" alt="etch screenshot" /></a>
+										<h3>Etch</h3>
+										<p>Technologies: Node.js, Express, MongoDB, Bootstrap.</p>
+									</article>
+									<article class="6u 12u$(xsmall) work-item">
+										<a href="https://hike-la-app.herokuapp.com/" class="image fit thumb" target="_blank"><img id="hikela-img" class="project-img" src="images/hikela.png" alt="hike la screenshot" /></a>
+										<h3>HIKE LA</h3>
+										<p>Technologies: Ruby, Rails, PostgreSQL, Active Record, Bootstrap.</p>
+									</article>
+									<article class="6u$ 12u$(xsmall) work-item">
+										<a href="https://annaboeri.github.io/connect-4/" class="image fit thumb" target="_blank"><img id="connect4-img"  class="project-img" src="images/connect4.png" alt="connect 4screenshot" /></a>
+										<h3>Connect 4</h3>
+										<p>Technologies: HTML, CSS, JavaScript, JQuery</p>
+									</article>
+						</div>
+						<ul class="actions">
+							<li><a href="https://github.com/annaboeri" class="button" target="_blank">See Projects on Github</a></li>
 						</ul>
-					</div>
+					</section>
 
-			</div>
+				<!-- Three -->
+					<section id="three">
+						<h2>Get In Touch</h2>
+						<p>Please feel free to reach out to me!</p>
+		
+								<ul class="labeled-icons">
+									<li>
+										<h3 class="icon fa-mobile"><span class="label">Phone</span></h3>
+										443-465-3318
+									</li>
+									<li>
+										<h3 class="icon fa-envelope-o"><span class="label">Email</span></h3>
+										<a href="#">annaboeri@gmail.com</a>
+									</li>
+								</ul>
+	
+					</section>
+
+		<!-- Footer -->
+			<footer id="footer">
+				<div class="inner">
+					<ul class="icons">
+						<li><a href="https://www.linkedin.com/in/annaboeri/" target="_blank" class="icon fa-linkedin"><span class="label">Twitter</span></a></li>
+						<li><a href="https://github.com/annaboeri" target="_blank" class="icon fa-github"><span class="label">Github</span></a></li>
+						<li><a href="images/AnnaBoeri_Resume.pdf" target="_blank"><span class="label">Resume</span></a>
+						</li>
+					</ul>
+				</div>
+			</footer>
 
 		<!-- Scripts -->
-			<script src="js/jquery.min.js"></script>
-			<script src="js/skel.min.js"></script>
-			<script src="js/skel-viewport.min.js"></script>
-			<script src="js/util.js"></script>
-			<!--[if lte IE 8]><script src="js/ie/respond.min.js"></script><![endif]-->
-			<script src="js/main.js"></script>
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.poptrox.min.js"></script>
+			<script src="assets/js/skel.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+			<script src="assets/js/main.js"></script>
 
 	</body>
 </html>
