update project descriptions

--- a/index.html
+++ b/index.html
@@ -27,8 +27,11 @@
 						<header class="major">
 							<h2>About Me</h2>
 						</header>
-						<p>I am a Los Angeles, CA based Web Developer and Stanford grad with previous experience in Teaching and Tech Recruiting. Originally from Baltimore, MD, I moved to LA two years ago from Washington, DC. I love exploring everything LA and the West Coast has to offer and am eager to help grow the open source and local tech community in the area!
-							While I’ve been working most recently with HTML5, CSS3, JavaScript (ES6), and the MERN Stack (MongoDB, Express, React, and Node.js), I love learning new technologies and am open to collaborating on projects of all kinds!</p>
+						<p>I am a Los Angeles, CA based Web Developer experienced with JavaScript, Node.js, React, and MongoDB. 
+							As a former Teacher, I love learning new things and sharing that knowledge with others. 
+							I'm eager to help grow the open source and local tech community in the area!	
+							
+							As a former east coaster, I also love exploring everything LA and the West Coast has to offer!  
 					</section>
 
 				<!-- Two -->
@@ -37,23 +40,23 @@
 						<div class="row">
 								<article class="6u 12u$(xsmall) work-item">
 										<a href="https://project-4-globalink.herokuapp.com/" target="_blank" class="image fit thumb"><img id="globalink-img" class="project-img" src="images/globalink.png" alt="globalink screenshot" /></a>
-										<h3>GLOBALink</h3>
-										<p>Technologies: Node.js, Express, MonggoDB, React, Socket.io, Milligram</p>
+										<h3>GLOBALink</br />A single page React app that allows users to explore cities around the globe while chatting in real time with other users on the site.</h3>
+ 										<p>Technologies Used: Node.js, Express, MonggoDB, React, Socket.io, Milligram</p>
 									</article>
 									<article class="6u$ 12u$(xsmall) work-item">
 										<a href="https://etches.herokuapp.com/" class="image fit thumb" target="_blank"><img id="etch-img" class="project-img" src="images/etch.png" alt="etch screenshot" /></a>
-										<h3>Etch</h3>
-										<p>Technologies: Node.js, Express, MongoDB, Bootstrap.</p>
+										<h3>Etch<br />A Node.js app that uses IBM Watson's Natural Language Understanding API to analyze and display the underlying emotions being communicated in text.</h3>
+										<p>Technologies Used: Node.js, Express, MongoDB, Bootstrap.</p>
 									</article>
 									<article class="6u 12u$(xsmall) work-item">
 										<a href="https://hike-la-app.herokuapp.com/" class="image fit thumb" target="_blank"><img id="hikela-img" class="project-img" src="images/hikela.png" alt="hike la screenshot" /></a>
-										<h3>HIKE LA</h3>
-										<p>Technologies: Ruby, Rails, PostgreSQL, Active Record, Bootstrap.</p>
+										<h3>HIKE LA<br />A Ruby on Rails app that allows users to explore, post, and review hikes in the LA area.</h3>
+										<p>Technologies Used: Ruby, Rails, PostgreSQL, Active Record, Bootstrap.</p>
 									</article>
 									<article class="6u$ 12u$(xsmall) work-item">
 										<a href="https://annaboeri.github.io/connect-4/" class="image fit thumb" target="_blank"><img id="connect4-img"  class="project-img" src="images/connect4.png" alt="connect 4screenshot" /></a>
-										<h3>Connect 4</h3>
-										<p>Technologies: HTML, CSS, JavaScript, JQuery</p>
+										<h3>Connect 4<br />A two-player JavaScript game inspired by the Milton Bradley classic.</h3>
+										<p>Technologies Used: HTML, CSS, JavaScript, JQuery</p>
 									</article>
 						</div>
 						<ul class="actions">
