update project links

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 						</header>
 						<p>I am a Los Angeles, CA based Web Developer experienced with JavaScript, Node.js, React, and MongoDB. 
 							With a background in teaching and psychology, I love learning new things and leveraging that knowledge to help others. 
-							As a former east coaster, I love exploring everything LA and the West Coast has to offer. 			   
-							I'm eager to help grow the open source and local tech community in the area - so feel free to reach out!
+							As a former East Coaster, I also love exploring everything LA and the West Coast has to offer. 			   
+							I'm eager to help grow the open source and local tech community in the area, so feel free to reach out!
 						</p>
 					</section>
 
@@ -41,44 +41,41 @@
 								<article class="6u 12u$(xsmall) work-item">
 										<img id="globalink-img" class="image fit thumb project-img" src="images/globalink.png" alt="globalink screenshot" />
 										<h3>GLOBALink</br />A single page React app that allows users to explore cities around the globe while chatting in real time with other users on the site.</h3>
-										 <p>Technologies Used: Node.js, Express, MonggoDB, React, Socket.io, Milligram</p>
+										 <p><b>Technologies Used:</b> Node.js, Express, MonggoDB, React, Socket.io, Milligram</p>
 										 <a href="https://project-4-globalink.herokuapp.com/"></a>
 										 <ul class="actions">
-												<li><a href="https://github.com/annaboeri" class="button project-btn" target="_blank">Github</a></li>
-												<li><a href="https://project-4-globalink.herokuapp.com/" class="button project-btn" target="_blank">Deployed Version</a></li>
+												<li><a href="https://project-4-globalink.herokuapp.com/" class="button small project-btn" target="_blank">Deployed Version</a></li>
+												<li><a href="https://github.com/annaboeri/Project-4-GLOBALink" class="button small project-btn" target="_blank">Github</a></li>
 										</ul>
 									</article>
 									<article class="6u$ 12u$(xsmall) work-item">
 										<img id="etch-img" class="image fit thumb project-img" src="images/etch.png" alt="etch screenshot" />
 										<h3>Etch<br />A Node.js app that uses IBM Watson's Natural Language Understanding API to analyze and display the underlying emotions being communicated in text.</h3>
-										<p>Technologies Used: Node.js, Express, MongoDB, Bootstrap.</p>
+										<p><b>Technologies Used:</b> Node.js, Express, MongoDB, Bootstrap.</p>
 										<ul class="actions ">
-												<li><a href="https://github.com/annaboeri" class="button project-btn" target="_blank">Github</a></li>
-												<li><a href="https://etches.herokuapp.com/" class="button project-btn" target="_blank">Deployed Version</a></li>
+												<li><a href="https://etches.herokuapp.com/" class="button small project-btn" target="_blank">Deployed Version</a></li>
+												<li><a href="https://github.com/annaboeri/Etch" class="button small project-btn" target="_blank">Github</a></li>
 										</ul>
 									</article>
 									<article class="6u 12u$(xsmall) work-item">
 										<img id="hikela-img" class="image fit thumb project-img" src="images/hikela.png" alt="hike la screenshot" />
 										<h3>HIKE LA<br />A Ruby on Rails app that allows users to explore, post, and review hikes in the LA area.</h3>
-										<p>Technologies Used: Ruby, Rails, PostgreSQL, Active Record, Bootstrap.</p>
+										<p><b>Technologies Used:</b> Ruby, Rails, PostgreSQL, Active Record, Bootstrap.</p>
 										<ul class="actions">
-												<li><a href="https://github.com/annaboeri" class="button project-btn" target="_blank">Github</a></li>
-												<li><a href="https://hike-la-app.herokuapp.com/" class="button project-btn" target="_blank">Deployed Version</a></li>
+												<li><a href="https://hike-la-app.herokuapp.com/" class="button small project-btn" target="_blank">Deployed Version</a></li>
+												<li><a href="https://github.com/annaboeri/hike_la_app" class="button small project-btn" target="_blank">Github</a></li>
 										</ul>
 									</article>
 									<article class="6u$ 12u$(xsmall) work-item">
 										<img id="connect4-img"  class="image fit thumb project-img" src="images/connect4.png" alt="connect 4screenshot" />
 										<h3>Connect 4<br />A two-player JavaScript game inspired by the Milton Bradley classic.</h3>
-										<p>Technologies Used: HTML, CSS, JavaScript, JQuery</p>
+										<p><b>Technologies Used:</b> HTML, CSS, JavaScript, JQuery</p>
 										<ul class="actions">
-												<li><a href="https://github.com/annaboeri" class="button project-btn" target="_blank">Github</a></li>
-												<li><a href="https://annaboeri.github.io/connect-4/" class="button project-btn" target="_blank">Deployed Version</a></li>
+												<li><a href="https://annaboeri.github.io/connect-4/" class="button small project-btn" target="_blank">Deployed Version</a></li>
+												<li><a href="https://github.com/annaboeri/connect-4" class="button small project-btn" target="_blank">Github</a></li>
 										</ul>
 									</article>
 						</div>
-						<ul class="actions">
-							<li><a href="https://github.com/annaboeri" class="button" target="_blank">See Projects on Github</a></li>
-						</ul>
 					</section>
 
 				<!-- Three -->
