add technical skills section

--- a/index.html
+++ b/index.html
@@ -36,12 +36,35 @@
 
 				<!-- Two -->
 					<section id="two">
+						<h2>Technical Skills</h2>
+							<ul>
+								<li>
+									<b>Front-End:</b> JavaScript (ES6), HTML5, CSS3, jQuery, Bootstrap, React
+								</li>
+								<li>
+									<b>Back-End:</b> Node.js, Express, Ruby, Rails
+								</li>
+								<li>
+									<b>Methodologies:</b> MVC, OOP, REST, Agile 
+								</li>
+								<li>
+									<b>Databases:</b> MongoDB, Mongoose, SQL, PostgreSQL, Active Record 
+
+								</li>
+								<li>
+									<b>Version Control:</b> Git, GitHub
+								</li>
+							</ul>
+					</section>
+
+					<!-- Three -->
+					<section id="three">
 						<h2>Recent Work</h2>
 						<div class="row">
 								<article class="6u 12u$(xsmall) work-item">
 										<img id="globalink-img" class="image fit thumb project-img" src="images/globalink.png" alt="globalink screenshot" />
 										<h3>GLOBALink</br />A single page React app that allows users to explore cities around the globe while chatting in real time with other users on the site.</h3>
-										 <p><b>Technologies Used:</b> Node.js, Express, MonggoDB, React, Socket.io, Milligram</p>
+										 <p><b>Technologies Used:</b> Node.js, Express, MongoDB, React, Socket.io, Milligram</p>
 										 <a href="https://project-4-globalink.herokuapp.com/"></a>
 										 <ul class="actions">
 												<li><a href="https://project-4-globalink.herokuapp.com/" class="button small project-btn" target="_blank">Deployed Version</a></li>
@@ -78,8 +101,8 @@
 						</div>
 					</section>
 
-				<!-- Three -->
-					<section id="three">
+				<!-- Four -->
+					<section id="four">
 						<h2>Get In Touch</h2>
 						<p>Please feel free to reach out to me!</p>
 		
