--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 						<header class="major">
 							<h2>About Me</h2>
 						</header>
-						<p>I am a Los Angeles, CA based Web Developer experienced with JavaScript, Node.js, React, and MongoDB. 
-							With a background in teaching and psychology, I love learning new things and leveraging that knowledge to help others. 
+						<p>I am a Los Angeles, CA based Web Developer with experience working in JavaScript, Node.js, React, and MongoDB. 
+							With a background in Teaching and Psychology, I love learning new things and leveraging that knowledge to help others. 
 							As a former East Coaster, I also love exploring everything LA and the West Coast has to offer. 			   
 							I'm eager to help grow the open source and local tech community in the area, so feel free to reach out!
 						</p>
@@ -59,7 +59,7 @@
 
 					<!-- Three -->
 					<section id="three">
-						<h2>Recent Work</h2>
+							<h2>Recent Work</h2><br />
 						<div class="row">
 								<article class="6u 12u$(xsmall) work-item">
 										<img id="globalink-img" class="image fit thumb project-img" src="images/globalink.png" alt="globalink screenshot" />
