update about and technical skills sections

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 						<header class="major">
 							<h2>About Me</h2>
 						</header>
-						<p>I am a Los Angeles, CA based Web Developer with experience working in JavaScript, Node.js, React, and MongoDB. 
+						<p>I am a Los Angeles, CA based Web Developer with experience working in JavaScript, Node.js, React, Redux, and MongoDB. 
 							With a background in Teaching and Psychology, I love learning new things and leveraging that knowledge to help others. 
 							As a former East Coaster, I also love exploring everything LA and the West Coast has to offer. 			   
 							I'm eager to help grow the open source and local tech community in the area, so feel free to reach out!
@@ -39,7 +39,7 @@
 						<h2>Technical Skills</h2>
 							<ul>
 								<li>
-									<b>Front-End:</b> JavaScript (ES6), HTML5, CSS3, jQuery, Bootstrap, React
+									<b>Front-End:</b> JavaScript (ES6), HTML5, CSS3, jQuery, Bootstrap, React, Redux
 								</li>
 								<li>
 									<b>Back-End:</b> Node.js, Express, Ruby, Rails
@@ -64,7 +64,7 @@
 								<article class="6u 12u$(xsmall) work-item">
 										<img id="globalink-img" class="image fit thumb project-img" src="images/globalink.png" alt="globalink screenshot" />
 										<h3>GLOBALink</br />A single page React app that allows users to explore cities around the globe while chatting in real time with other users on the site.</h3>
-										 <p><b>Technologies Used:</b> Node.js, Express, MongoDB, React, Socket.io, Milligram</p>
+										 <p><b>Technologies Used:</b> React, Redux, Node.js, Express, MongoDB, Socket.io, Milligram</p>
 										 <a href="https://project-4-globalink.herokuapp.com/"></a>
 										 <ul class="actions">
 												<li><a href="https://project-4-globalink.herokuapp.com/" class="button small project-btn" target="_blank">Deployed Version</a></li>
